--- a/iee landing page/style.css
+++ b/iee landing page/style.css
@@ -357,7 +357,7 @@ ul li {
   width: 100%;
   height: 60vh;
   position: relative;
-  object-fit: cover; /* Add this to ensure the image covers the entire container */
+  object-fit: cover; 
 }
 
 .overlay-container {
@@ -371,7 +371,7 @@ ul li {
   align-items: center;
   flex-wrap: wrap; 
   object-fit: cover;
-  overflow: hidden;/* Add this to wrap the overlay divs on smaller screens */
+  overflow: hidden;
 }
 
 .overlay-div1, .overlay-div2 {
@@ -425,7 +425,7 @@ position: relative;
 
 
 
-/* Add these media queries to adjust the layout on smaller screens */
+
 
 
 
